changed: fixed background color and z-index order on header in responsive

--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -94,7 +94,7 @@
     padding: 0;
     z-index: $z-index-header-sidebar;
     @include flex(column, nowrap, flex-start, stretch);
-    background-color: var(--white);
+    background-color: var(--bg-color);
 
     .header__left {
       width: 100%;
